fix overflow

--- a/src/scss/themes/_fau-einrichtungen.scss
+++ b/src/scss/themes/_fau-einrichtungen.scss
@@ -3,6 +3,8 @@ Settings for FAU Einrichtungen theme
 */
 .fau-theme {
     .content-row .entry-content {
-        overflow-x: auto;
+	.faudir {		    
+	    overflow-x: auto;
+	}
     }    
 }
